--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -287,6 +287,8 @@ doc["threejsblock"].bind("click", threejsblock.do)
 <div id="brython_div2"></div>
 <!-- editor2 結束 -->
 <h1>W4-W5</h1>
+<p>以下是零件截圖</p>
+<p></p>
 <p>1.底座</p>
 <p><img alt="" height="132" src="/images/螢幕擷取畫面 2023-11-08 224543.png" width="211"/></p>
 <p>2.漏斗</p>
