--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -287,8 +287,9 @@ doc["threejsblock"].bind("click", threejsblock.do)
 <div id="brython_div2"></div>
 <!-- editor2 結束 -->
 <h1>W4-W5</h1>
-<p>以下是零件截圖</p>
-<p></p>
+<p>循環繞圈運動系統:</p>
+<p>設計一組機電模擬系統, 可以讓鋼球在以下圖示的圓盤孔洞落下後, 沿著軌道運動並回到圓盤上, 以進行重複循環繞圈運動.</p>
+<p>以下為零件截圖</p>
 <p>1.底座</p>
 <p><img alt="" height="132" src="/images/螢幕擷取畫面 2023-11-08 224543.png" width="211"/></p>
 <p>2.漏斗</p>
