--- a/content/index.html
+++ b/content/index.html
@@ -143,8 +143,7 @@ img.add_border {
         </header>
     <div id="tipue_search_content"> <a href='Brython.html'>Next</a> >> Brython<br /><h1>About</h1>
 <p><a href="https://github.com/mdecycu/cmsite"> https://github.com/mdecycu/cmsite </a></p>
-<p></p>
-<br /> <a href='Brython.html'>Next</a> >> Brython</div>
+<p><img alt="" height="194" src="./../images/images.jpg" width="259"/></p><br /> <a href='Brython.html'>Next</a> >> Brython</div>
         
     <!-- footer -->
       <div class="container">
