--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,7 +1,6 @@
 <h1>About</h1>
 <p><a href="https://github.com/mdecycu/cmsite"> https://github.com/mdecycu/cmsite </a></p>
-<p></p>
-<h1>Brython</h1>
+<p><img alt="" height="194" src="/images/images.jpg" width="259"/></p><h1>Brython</h1>
 <p><a href="https://en.wikipedia.org/wiki/Python_(programming_language)">https://en.wikipedia.org/wiki/Python_(programming_language)</a></p>
 <h4>Examples:</h4>
 <p style="padding-left: 30px;"><a href="https://gist.github.com/mdecycu/d9082d678096bd58378d6afe2c7fa05d">https://gist.github.com/mdecycu/d9082d678096bd58378d6afe2c7fa05d</a></p>
@@ -287,8 +286,8 @@ doc["threejsblock"].bind("click", threejsblock.do)
 <div id="brython_div2"></div>
 <!-- editor2 結束 -->
 <h1>W4-W5</h1>
-<p>循環繞圈運動系統:</p>
-<p>設計一組機電模擬系統, 可以讓鋼球在以下圖示的圓盤孔洞落下後, 沿著軌道運動並回到圓盤上, 以進行重複循環繞圈運動.</p>
+<p><b>Autodesk Inventor</b><span><span> </span>是一個</span>電腦輔助設計（電腦輔助製圖）<span>應用程序，用來進行3D機械設計、模擬、顯示、與儲存。Inventor允許使用者在一個單一環境中，整合2D和3D數據，創建一個虛擬的產品，使用戶能夠在產品正式生產前，驗證和調整產品的屬性。<span><span> </span>Autodesk Inventor也包含數據、直接編輯和自由的建模工具，以及不同CAD檔案的轉檔能力。</span></span><b></b></p>
+<p>循環繞圈運動系統:設計一組機電模擬系統, 可以讓鋼球在以下圖示的圓盤孔洞落下後, 沿著軌道運動並回到圓盤上, 以進行重複循環繞圈運動.</p>
 <p>以下為零件截圖</p>
 <p>1.底座</p>
 <p><img alt="" height="132" src="/images/螢幕擷取畫面 2023-11-08 224543.png" width="211"/></p>
