--- a/config/content.htm
+++ b/config/content.htm
@@ -285,9 +285,10 @@ doc["threejsblock"].bind("click", threejsblock.do)
 <p><!-- Brython 程式執行的結果, 都以 brython_div1 作為切入位置 --></p>
 <div id="brython_div2"></div>
 <!-- editor2 結束 -->
-<h1>W4-W5</h1>
-<p>循環繞圈運動系統:</p>
-<p>設計一組機電模擬系統, 可以讓鋼球在以下圖示的圓盤孔洞落下後, 沿著軌道運動並回到圓盤上, 以進行重複循環繞圈運動.</p>
+<h1>作業</h1>
+<h2><b>Inventor製作</b></h2>
+<p><b>Autodesk Inventor</b><span><span> </span>是一個</span>電腦輔助設計（電腦輔助製圖）<span>應用程序，用來進行3D機械設計、模擬、顯示、與儲存。Inventor允許使用者在一個單一環境中，整合2D和3D數據，創建一個虛擬的產品，使用戶能夠在產品正式生產前，驗證和調整產品的屬性。<span><span> </span>Autodesk Inventor也包含數據、直接編輯和自由的建模工具，以及不同CAD檔案的轉檔能力。</span></span><b></b></p>
+<p>循環繞圈運動系統:設計一組機電模擬系統, 可以讓鋼球在以下圖示的圓盤孔洞落下後, 沿著軌道運動並回到圓盤上, 以進行重複循環繞圈運動.</p>
 <p>以下為零件截圖</p>
 <p>1.底座</p>
 <p><img alt="" height="132" src="/images/螢幕擷取畫面 2023-11-08 224543.png" width="211"/></p>
