--- a/content/Brython.html
+++ b/content/Brython.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Brython.html'>Brython</a><li><a href='W4-W5.html'>W4-W5</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Brython.html'>Brython</a><li class='has-children'><a href='作業.html'>作業</a><ul class='dropdown'><li><a href='Inventor製作.html'>Inventor製作</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,7 +142,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='W4-W5.html'>Next</a> >> W4-W5<br /><h1>Brython</h1>
+    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='作業.html'>Next</a> >> 作業<br /><h1>Brython</h1>
 <p><a href="https://en.wikipedia.org/wiki/Python_(programming_language)">https://en.wikipedia.org/wiki/Python_(programming_language)</a></p>
 <h4>Examples:</h4>
 <p style="padding-left: 30px;"><a href="https://gist.github.com/mdecycu/d9082d678096bd58378d6afe2c7fa05d">https://gist.github.com/mdecycu/d9082d678096bd58378d6afe2c7fa05d</a></p>
@@ -427,7 +427,7 @@ doc["threejsblock"].bind("click", threejsblock.do)
 <p><!-- Brython 程式執行的結果, 都以 brython_div1 作為切入位置 --></p>
 <div id="brython_div2"></div>
 <!-- editor2 結束 -->
-<br />About << <a href='About.html'>Previous</a> <a href='W4-W5.html'>Next</a> >> W4-W5</div>
+<br />About << <a href='About.html'>Previous</a> <a href='作業.html'>Next</a> >> 作業</div>
         
     <!-- footer -->
       <div class="container">
