--- a/content/作業.html
+++ b/content/作業.html
@@ -2,6 +2,7 @@
         <head>
         <title>cmsite</title>
         <meta charset="utf-8">
+<meta property="head" content="H1">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -141,9 +142,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='Brython.html'>Next</a> >> Brython<br /><h1>About</h1>
-<p><a href="https://github.com/mdecycu/cmsite"> https://github.com/mdecycu/cmsite </a></p>
-<p><img alt="" height="194" src="./../images/images.jpg" width="259"/></p><br /> <a href='Brython.html'>Next</a> >> Brython</div>
+    <div id="tipue_search_content">Brython << <a href='Brython.html'>Previous</a> <a href='Inventor製作.html'>Next</a> >> Inventor製作<br /><h1>作業</h1>
+<br />Brython << <a href='Brython.html'>Previous</a> <a href='Inventor製作.html'>Next</a> >> Inventor製作</div>
         
     <!-- footer -->
       <div class="container">
