--- a/content/Inventor製作.html
+++ b/content/Inventor製作.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Brython.html'>Brython</a><li class='has-children'><a href='作業.html'>作業</a><ul class='dropdown'><li><a href='Inventor製作.html'>Inventor製作</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Brython.html'>Brython</a><li class='has-children'><a href='作業.html'>作業</a><ul class='dropdown'><li><a href='Inventor製作.html'>Inventor製作</a></li></ul><li><a href='網路設定.html'>網路設定</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,7 +142,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">作業 << <a href='作業.html'>Previous</a> <br /><h1>Inventor製作</h1>
+    <div id="tipue_search_content">作業 << <a href='作業.html'>Previous</a> <a href='網路設定.html'>Next</a> >> 網路設定<br /><h1>Inventor製作</h1>
 <p><b>Autodesk Inventor</b><span><span> </span>是一個</span>電腦輔助設計（電腦輔助製圖）<span>應用程序，用來進行3D機械設計、模擬、顯示、與儲存。Inventor允許使用者在一個單一環境中，整合2D和3D數據，創建一個虛擬的產品，使用戶能夠在產品正式生產前，驗證和調整產品的屬性。<span><span> </span>Autodesk Inventor也包含數據、直接編輯和自由的建模工具，以及不同CAD檔案的轉檔能力。</span></span><b></b></p>
 <p>循環繞圈運動系統:設計一組機電模擬系統, 可以讓鋼球在以下圖示的圓盤孔洞落下後, 沿著軌道運動並回到圓盤上, 以進行重複循環繞圈運動.</p>
 <p>以下為零件截圖</p>
@@ -152,10 +152,7 @@ img.add_border {
 <p><img alt="" height="180" src="./../images/螢幕擷取畫面 2023-11-08 224223.png" width="211"/></p>
 <p>3.球</p>
 <p><img alt="" height="142" src="./../images/螢幕擷取畫面 2023-11-08 220332.png" width="214"/></p>
-<hr/>
-<p>
-<script src="https://unpkg.com/three@0.144.0/build/three.js" type="text/javascript"></script>
-</p><br />作業 << <a href='作業.html'>Previous</a> </div>
+<br />作業 << <a href='作業.html'>Previous</a> <a href='網路設定.html'>Next</a> >> 網路設定</div>
         
     <!-- footer -->
       <div class="container">
