--- a/content/作業.html
+++ b/content/作業.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Brython.html'>Brython</a><li class='has-children'><a href='作業.html'>作業</a><ul class='dropdown'><li><a href='Inventor製作.html'>Inventor製作</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Brython.html'>Brython</a><li class='has-children'><a href='作業.html'>作業</a><ul class='dropdown'><li><a href='Inventor製作.html'>Inventor製作</a></li></ul><li><a href='網路設定.html'>網路設定</a></li>
                       </ul>
                 </nav>
               </div>
