永動機製作

--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -286,8 +286,8 @@ doc["threejsblock"].bind("click", threejsblock.do)
 <p><!-- Brython 程式執行的結果, 都以 brython_div1 作為切入位置 --></p>
 <div id="brython_div2"></div>
 <!-- editor2 結束 -->
-<h1>作業</h1>
-<h2><b>Inventor製作</b></h2>
+<h1>W13-14</h1>
+<h2>Inventor製作</h2>
 <p><b>Autodesk Inventor</b><span><span> </span>是一個</span>電腦輔助設計（電腦輔助製圖）<span>應用程序，用來進行3D機械設計、模擬、顯示、與儲存。Inventor允許使用者在一個單一環境中，整合2D和3D數據，創建一個虛擬的產品，使用戶能夠在產品正式生產前，驗證和調整產品的屬性。<span><span> </span>Autodesk Inventor也包含數據、直接編輯和自由的建模工具，以及不同CAD檔案的轉檔能力。</span></span><b></b></p>
 <p>循環繞圈運動系統:設計一組機電模擬系統, 可以讓鋼球在以下圖示的圓盤孔洞落下後, 沿著軌道運動並回到圓盤上, 以進行重複循環繞圈運動.</p>
 <p>以下為零件截圖</p>
@@ -297,7 +297,14 @@ doc["threejsblock"].bind("click", threejsblock.do)
 <p><img alt="" height="180" src="/images/螢幕擷取畫面 2023-11-08 224223.png" width="211"/></p>
 <p>3.球</p>
 <p><img alt="" height="142" src="/images/螢幕擷取畫面 2023-11-08 220332.png" width="214"/></p>
-<h2>網路設定</h2>
+<p>4.組合圖</p>
+<p></p>
+<p><img alt="" height="195" src="/images/螢幕擷取畫面 2023-11-29 201151.png" width="211"/></p>
+<p></p>
+<h1>W15</h1>
+<h2>永動機2</h2>
+<p>1.底座</p>
+<p></p><h1>網路設定</h1>
 <p>由於電腦輔助設計室某部分套件, 在 IPv4 網路環境下會被防毒軟體偵測到封包異常而封閉網路, 因此以下將 IPv4 網路關閉, 僅使用 IPv6, 並透過雙網路協定支援的代理主機設定, 以便與僅支援 IPv4 的網路主機連線.</p>
 <p>利用隨身碟上的批次檔案進行電腦輔助設計室網路環境設定 (<a href="https://nfuedu-my.sharepoint.com/:v:/g/personal/yen_nfu_edu_tw/Ed9GeWN75kJDmWsdXEeEDukBetqQ1g_3tA_PoIY-dHXDgw?nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJPbmVEcml2ZUZvckJ1c2luZXNzIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXciLCJyZWZlcnJhbFZpZXciOiJNeUZpbGVzTGlua0RpcmVjdCJ9fQ&amp;e=e6bNYA">設定影片</a>):</p>
 <p>1_cadlab_network_setup.bat</p>
