--- a/content/W13-14.html
+++ b/content/W13-14.html
@@ -2,7 +2,7 @@
         <head>
         <title>cmsite</title>
         <meta charset="utf-8">
-<meta property="head" content="H2">
+<meta property="head" content="H1">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -142,21 +142,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W13-14 << <a href='W13-14.html'>Previous</a> <a href='W15.html'>Next</a> >> W15<br /><h1>Inventor製作</h1>
-<p><b>Autodesk Inventor</b><span><span> </span>是一個</span>電腦輔助設計（電腦輔助製圖）<span>應用程序，用來進行3D機械設計、模擬、顯示、與儲存。Inventor允許使用者在一個單一環境中，整合2D和3D數據，創建一個虛擬的產品，使用戶能夠在產品正式生產前，驗證和調整產品的屬性。<span><span> </span>Autodesk Inventor也包含數據、直接編輯和自由的建模工具，以及不同CAD檔案的轉檔能力。</span></span><b></b></p>
-<p>循環繞圈運動系統:設計一組機電模擬系統, 可以讓鋼球在以下圖示的圓盤孔洞落下後, 沿著軌道運動並回到圓盤上, 以進行重複循環繞圈運動.</p>
-<p>以下為零件截圖</p>
-<p>1.底座</p>
-<p><img alt="" height="132" src="./../images/螢幕擷取畫面 2023-11-08 224543.png" width="211"/></p>
-<p>2.漏斗</p>
-<p><img alt="" height="180" src="./../images/螢幕擷取畫面 2023-11-08 224223.png" width="211"/></p>
-<p>3.球</p>
-<p><img alt="" height="142" src="./../images/螢幕擷取畫面 2023-11-08 220332.png" width="214"/></p>
-<p>4.組合圖</p>
-<p></p>
-<p><img alt="" height="195" src="./../images/螢幕擷取畫面 2023-11-29 201151.png" width="211"/></p>
-<p></p>
-<br />W13-14 << <a href='W13-14.html'>Previous</a> <a href='W15.html'>Next</a> >> W15</div>
+    <div id="tipue_search_content">Brython << <a href='Brython.html'>Previous</a> <a href='Inventor製作.html'>Next</a> >> Inventor製作<br /><h1>W13-14</h1>
+<br />Brython << <a href='Brython.html'>Previous</a> <a href='Inventor製作.html'>Next</a> >> Inventor製作</div>
         
     <!-- footer -->
       <div class="container">
