--- a/content/index.html
+++ b/content/index.html
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Brython.html'>Brython</a><li class='has-children'><a href='作業.html'>作業</a><ul class='dropdown'><li><a href='Inventor製作.html'>Inventor製作</a></li></ul><li><a href='網路設定.html'>網路設定</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Brython.html'>Brython</a><li class='has-children'><a href='W13-14.html'>W13-14</a><ul class='dropdown'><li><a href='Inventor製作.html'>Inventor製作</a></li></ul><li class='has-children'><a href='W15.html'>W15</a><ul class='dropdown'><li><a href='永動機2.html'>永動機2</a></li></ul><li><a href='網路設定.html'>網路設定</a></li>
                       </ul>
                 </nav>
               </div>
