--- a/content/永動機2.html
+++ b/content/永動機2.html
@@ -2,7 +2,7 @@
         <head>
         <title>cmsite</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Brython.html'>Brython</a><li class='has-children'><a href='作業.html'>作業</a><ul class='dropdown'><li><a href='Inventor製作.html'>Inventor製作</a></li></ul><li><a href='網路設定.html'>網路設定</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Brython.html'>Brython</a><li class='has-children'><a href='W13-14.html'>W13-14</a><ul class='dropdown'><li><a href='Inventor製作.html'>Inventor製作</a></li></ul><li class='has-children'><a href='W15.html'>W15</a><ul class='dropdown'><li><a href='永動機2.html'>永動機2</a></li></ul><li><a href='網路設定.html'>網路設定</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,8 +142,11 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Brython << <a href='Brython.html'>Previous</a> <a href='Inventor製作.html'>Next</a> >> Inventor製作<br /><h1>作業</h1>
-<br />Brython << <a href='Brython.html'>Previous</a> <a href='Inventor製作.html'>Next</a> >> Inventor製作</div>
+    <div id="tipue_search_content">W15 << <a href='W15.html'>Previous</a> <a href='網路設定.html'>Next</a> >> 網路設定<br /><h1>永動機2</h1>
+<p>1.底座</p>
+<p><img alt="" height="158" src="./../images/螢幕擷取畫面 2023-12-27 225939.png" width="231"/></p>
+<p>2.軌道</p>
+<p><img alt="" height="154" src="./../images/螢幕擷取畫面 2023-12-27 230008.png" width="235"/></p><br />W15 << <a href='W15.html'>Previous</a> <a href='網路設定.html'>Next</a> >> 網路設定</div>
         
     <!-- footer -->
       <div class="container">
