永動機模擬動作

--- a/config/content.htm
+++ b/config/content.htm
@@ -306,7 +306,10 @@ doc["threejsblock"].bind("click", threejsblock.do)
 <p>1.底座</p>
 <p><img alt="" height="158" src="/images/螢幕擷取畫面 2023-12-27 225939.png" width="231"/></p>
 <p>2.軌道</p>
-<p><img alt="" height="154" src="/images/螢幕擷取畫面 2023-12-27 230008.png" width="235"/></p><h1>網路設定</h1>
+<p><img alt="" height="154" src="/images/螢幕擷取畫面 2023-12-27 230008.png" width="235"/></p>
+<p><img alt="" height="216" src="/images/螢幕擷取畫面 2024-01-11 101357.png" width="383"/></p>
+<p></p>
+<h1>網路設定</h1>
 <p>由於電腦輔助設計室某部分套件, 在 IPv4 網路環境下會被防毒軟體偵測到封包異常而封閉網路, 因此以下將 IPv4 網路關閉, 僅使用 IPv6, 並透過雙網路協定支援的代理主機設定, 以便與僅支援 IPv4 的網路主機連線.</p>
 <p>利用隨身碟上的批次檔案進行電腦輔助設計室網路環境設定 (<a href="https://nfuedu-my.sharepoint.com/:v:/g/personal/yen_nfu_edu_tw/Ed9GeWN75kJDmWsdXEeEDukBetqQ1g_3tA_PoIY-dHXDgw?nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJPbmVEcml2ZUZvckJ1c2luZXNzIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXciLCJyZWZlcnJhbFZpZXciOiJNeUZpbGVzTGlua0RpcmVjdCJ9fQ&amp;e=e6bNYA">設定影片</a>):</p>
 <p>1_cadlab_network_setup.bat</p>
