--- a/content/永動機2.html
+++ b/content/永動機2.html
@@ -146,7 +146,10 @@ img.add_border {
 <p>1.底座</p>
 <p><img alt="" height="158" src="./../images/螢幕擷取畫面 2023-12-27 225939.png" width="231"/></p>
 <p>2.軌道</p>
-<p><img alt="" height="154" src="./../images/螢幕擷取畫面 2023-12-27 230008.png" width="235"/></p><br />W15 << <a href='W15.html'>Previous</a> <a href='網路設定.html'>Next</a> >> 網路設定</div>
+<p><img alt="" height="154" src="./../images/螢幕擷取畫面 2023-12-27 230008.png" width="235"/></p>
+<p><img alt="" height="216" src="./../images/螢幕擷取畫面 2024-01-11 101357.png" width="383"/></p>
+<p></p>
+<br />W15 << <a href='W15.html'>Previous</a> <a href='網路設定.html'>Next</a> >> 網路設定</div>
         
     <!-- footer -->
       <div class="container">
